# MCP-RAG

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  CLI_CONFIG.md  CONTEXT_LOG.md  features.json  repo_context_state.json
.github/workflows/: benchmark-swarm.yml  ci-tests.yml  docker-mcp-smoke.yml  rag-eval.yml  repo-context-sync.yml
cerebro_python/: __init__.py  __main__.py  cli.py  mcp_server_integrated.py  rag_store.py
cerebro_python/application/: adapter_registry.py  agent_memory_ops.py  cognitive_runtime.py  (+4 more)
docs/: COGNITIVE_MEMORY.md  GestiónCognitivadeMemoriasporLLM.md  MINIMAX_INTEGRATION.md
rag_swarm_benchmark/: __init__.py  base_evaluator.py  benchmark_orchestrator.py  github_judge.py
scripts/: cerebro_swarm_run.py  mcp_http_smoke.py  rag_eval_levels.py  run_rag_eval_in_docker.ps1  run_rag_eval_in_docker.sh
tests/: test_adapter_registry.py  test_agent_memory_ops.py  test_cognitive_runtime.py  test_cognitive_scorer.py  test_cognitive_service.py  test_container_wiring.py  test_hybrid_ranker.py  test_llm_providers.py  test_mcp_server_integrated.py  test_memory_policy.py  test_minimax_query_rewriter.py  test_minimax_reranker.py  test_query_rewriter.py  test_rag_service.py  test_register_repo.py  test_repo_context_sync.py  test_reranker.py  test_scope_isolation.py  test_scope_strategy.py  test_symbol_indexing.py
tools/rust-ast-chunker/: Cargo.toml
tools/rust-ast-chunker/src/: main.rs
(+61 files in other folders)
