[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-rag-minimal"
version = "0.1.0"
description = "Hexagonal local RAG memory for coding agents with FastMCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastmcp>=2.12.0",
  "uvicorn>=0.30.0",
  "anthropic>=0.40.0"
]

[tool.setuptools.packages.find]
include = ["cerebro_python*"]
