[package]
name = "rust-ast-chunker"
version = "0.1.0"
edition = "2021"
description = "Semantic AST code chunker using tree-sitter"

[dependencies]
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
